lld/test/core/error-atom-attribute.objtxt
# RUN: not lld -core %s 2> %t.err
# RUN: FileCheck %s < %t.err

#
# Test that unknown atom attribute produces a readable error.
#

---
defined-atoms:
    - name:         entry
      scope:        hidden
      foobar:       true
      dead-strip:   never
  
...


# CHECK:       error: unknown key 'foobar'
# CHECK:       foobar
